Enforce non-null parameters in Action, ActionFactory, ActionType, and various classes for improved null safety